# gotohunt

./: LICENSE  README.md  compute_covisibility.py  omni_evaluation_code.py  pyproject.toml  setup.py
configs/: train.yaml
configs/machine/: default.yaml
configs/model/: anycalib.yaml  da3.yaml  da3_nested.yaml  default.yaml  dust3r.yaml  mapanything.yaml  mapanything_ablations.yaml  mapanything_dino_init.yaml  mapanything_dino_init_no_ref_view.yaml  mapanything_v1.yaml  mast3r.yaml  metric_dust3r.yaml  modular_dust3r_512_dpt.yaml  moge_1.yaml  moge_2.yaml  must3r.yaml  pi3.yaml  pi3x.yaml  pow3r.yaml  pow3r_ba.yaml  vggt.yaml  vggt_commercial.yaml  vggt_non_pretrained.yaml
configs/model/encoder/: croco_512.yaml  croco_512_data_norm_dust3r.yaml  dinov2_giant_24_layers.yaml  dinov2_large.yaml  radio_v2_5_large.yaml
configs/model/info_sharing/: aat_ifr_16_layers_dinov2_vitg_init.yaml  aat_ifr_16_layers_dinov2_vitg_init_no_ref_view.yaml  aat_ifr_16_layers_vitg_dim.yaml  aat_ifr_16_layers_vitg_dim_no_ref_view.yaml  aat_ifr_24_layers.yaml  aat_ifr_24_layers_escaling.yaml  aat_ifr_24_layers_no_ref_view.yaml  aat_ifr_24_layers_w_view_pe.yaml  aat_ifr_48_layers.yaml  aat_ifr_48_layers_escaling.yaml  aat_ifr_48_layers_no_ref_view.yaml  cat_ifr_dust3r.yaml  gat_ifr_24_layers.yaml  gat_ifr_24_layers_escaling.yaml
configs/model/pred_head/: dpt.yaml  dpt_pose.yaml  dpt_pose_scale.yaml  dpt_scale.yaml
configs/model/pred_head/adaptor_config/: campointmap_pose_confidence_mask.yaml  campointmap_pose_confidence_mask_scale.yaml  pointmap_confidence.yaml  pointmap_confidence_mask.yaml  pointmap_confidence_mask_scale.yaml  pointmap_factored_raydirs_depth_pose_confidence_mask_scale.yaml  pointmap_raydirs_depth_pose_confidence_mask_scale.yaml  raydirs_depth_pose_confidence_mask.yaml  raydirs_depth_pose_confidence_mask_scale.yaml
configs/model/task/: aug_training.yaml  calibrated_sfm.yaml  default.yaml  depth_completion.yaml  images_only.yaml  mvs.yaml  mvs_non_metric.yaml  mvs_training.yaml  non_metric_poses_metric_depth.yaml  non_metric_poses_metric_depth_sparse.yaml  non_metric_poses_non_metric_depth.yaml  non_metric_poses_non_metric_depth_sparse.yaml  pass_through.yaml  posed_sfm.yaml  posed_sfm_non_metric.yaml  registration.yaml  registration_sparse.yaml  registration_training.yaml
mapanything/models/: __init__.py
mapanything/models/mapanything/: __init__.py  ablations.py  model.py  modular_dust3r.py
mapanything/utils/: cropping.py  geometry.py  image.py  inference.py  metrics.py  misc.py  multiview_confidence.py  warnings.py
