[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mapanything"
version = "1.1"
description = "Universal Feed-Forward Metric 3D Reconstruction"
readme = "readme.md"
authors = [{ name = "Nikhil Keetha", email = "keethanikhil@gmail.com" }]
requires-python = ">=3.10.0"
dependencies = [
    "huggingface_hub",
    "hydra-core",
    "natsort",
    "opencv-python-headless==4.10.0.84",
    "orjson",
    "pillow-heif",
    "plyfile",
    "python-box",
    "requests",
    "rerun-sdk~=0.24.1",
    "safetensors",
    "tensorboard",
    "tqdm",
    "trimesh",
    "uniception==0.1.6",
]

[project.optional-dependencies]
data = ["pandas"]
dev = ["pre-commit", "pytest", "pytest-cov", "ruff"]
colmap = [
    "lightglue @ git+https://github.com/cvg/LightGlue.git",
    "open3d",
    "pycolmap==3.10.0"
]
gradio = ["gradio==5.47.2", "spaces"]
radio = ["timm"]
# External models for benchmarking
anycalib = ["anycalib @ git+https://github.com/javrtg/AnyCalib.git@main#egg=anycalib"]
dust3r = [
    "croco @ git+https://github.com/naver/croco.git@croco_module#egg=croco",
    "dust3r @ git+https://github.com/naver/dust3r.git@dust3r_setup#egg=dust3r",
]
mast3r = ["mast3r @ git+https://github.com/Nik-V9/mast3r.git@main#egg=mast3r"]
must3r = ["must3r @ git+https://github.com/naver/must3r.git@main#egg=must3r"]
pi3 = ["pi3 @ git+https://github.com/yyfz/Pi3.git@main#egg=pi3"]
pow3r = ["pow3r @ git+https://github.com/Nik-V9/pow3r.git@main#egg=pow3r"]
depth-anything-3 = ["depth-anything-3 @ git+https://github.com/Nik-V9/depth-anything-3.git@main#egg=depth-anything-3"]
rmvd = ["rmvd @ git+https://github.com/infinity1096/robustmvd.git@master#egg=rmvd"]

# Install all optional dependencies
all = [
    "mapanything[anycalib]",
    "mapanything[colmap]",
    "mapanything[data]",
    "mapanything[depth-anything-3]",
    "mapanything[dev]",
    "mapanything[dust3r]",
    "mapanything[gradio]",
    "mapanything[mast3r]",
    "mapanything[must3r]",
    "mapanything[pi3]",
    "mapanything[pow3r]",
    "mapanything[radio]",
    "mapanything[rmvd]",
]

# Setuptools configuration
[tool.setuptools]
# Disable automatic package discovery to avoid conflicts
packages = ["mapanything"]

# Include package data
[tool.setuptools.package-data]
"mapanything" = ["**/*"]

# Ruff for linting
[tool.ruff]
# Enable the isort rules.
lint.extend-select = ["I"]

# Following https://www.internalfb.com/wiki/Python/code_formatting/pyfmt/
target-version = "py310"

# Following https://www.internalfb.com/wiki/Python/code_formatting/pyfmt/
[tool.ruff.lint.isort]
case-sensitive = false
combine-as-imports = true
detect-same-package = false
order-by-type = false
known-first-party = ["mapanything", "uniception"]
